# lab_2_terminal

./: .gitignore  README.md  pyproject.toml
src/: cat_command.py  cd_command.py  cp_command.py  ls_command.py  main.py  mv_command.py  parsing.py  rm_command.py  tar_command.py  terminal.py  untar_command.py  unzip_command.py  zip_command.py
tests/: conftest.py  test_cat.py  test_cd.py  test_cp.py  test_ls.py  test_mv.py  test_parsing.py  test_rm.py  test_tar.py  test_untar.py  test_unzip.py  test_zip.py
